fixing Ui Bug on z-index

--- a/components/Nav/Navbar.module.css
+++ b/components/Nav/Navbar.module.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     width: 100%;
     position: absolute;
+    z-index: 999;
 }
 
 .navbar h1{
