--- a/styles/OpenSource.module.css
+++ b/styles/OpenSource.module.css
@@ -2,7 +2,6 @@
     width: 100%;
     position: relative;
     top: 0;
-    z-index: -1;
     height: 100vh;
     background: var(--main-color);
     text-align: center;
